<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Weather Mobilization</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="weather_fragment_name">Showing weather in </string>

    <string name="nav_drawer_weather">Weather</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_about">About</string>
    <string name="nav_drawer_metric">Units</string>

    <string name="farhenheit" translatable="false">°F</string>
    <string name="celsius" translatable="false">°C</string>
    <string name="background_update">Autoupdate weather</string>
    <string name="update_interval">Update interval</string>
    <string name="minutes">mins</string>
    <string name="city">City</string>

    <string name="preference_key_metrics" translatable="false">PREF_KEY_METRICS</string>
    <string name="preference_key_autoupdate" translatable="false">PREF_KEY_AUTOUPDATE</string>
    <string name="preference_key_update_interval" translatable="false">PREF_KEY_UPDATE_INTERVAL</string>
    <string name="preference_key_city_name" translatable="false">PREF_KEY_CITY_NAME</string>
    <string name="preference_key_city_lat" translatable="false">PREF_KEY_CITY_LAT</string>
    <string name="preference_key_city_lng" translatable="false">PREF_KEY_CITY_LNG</string>
    <string name="default_city_name">Moscow</string>
    <string name="default_city_lat" translatable="false">55.755826</string>
    <string name="default_city_lng" translatable="false">37.6173</string>

    <string name="about_message">Developed by Igor Kholopov for Yandex Mobilization\n
        <a href="http://www.freepik.com/free-photos-vectors/icon">Icon vector created by Anindyanfitri - Freepik.com</a></string>
    <string name="format_temperature" translatable="false"><xliff:g id="temp">%1.0f</xliff:g><xliff:g id="grad">%s</xliff:g></string>
    <string name="swipe_down_to_refresh">Swipe down to refresh</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="error_has_been">An error has occurred</string>
</resources>
