<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:key="@string/preference_key_metrics"
        android:defaultValue="true"
        app:layout="@layout/degree_switcher" />


    <SwitchPreferenceCompat
        android:key="@string/preference_key_autoupdate"
        android:defaultValue="true"
        android:title="@string/background_update"/>

    <com.pavelsikun.seekbarpreference.SeekBarPreferenceCompat
        android:key="@string/preference_key_update_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="@integer/default_update_interval"
        app:msbp_minValue="10"
        app:msbp_interval="10"
        app:msbp_maxValue="480"
        app:msbp_measurementUnit="@string/minutes"
        android:title="@string/update_interval"
        android:inputType="number"/>

    <Preference android:title="@string/city"
        android:key="@string/preference_key_city_name">
        <intent android:action="com.ikholopov.yamblz.weather.weathermobilization.SELECT_CITY"/>
    </Preference>

</PreferenceScreen>