<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/nav_drawer_metric"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/farhenheit"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"
        android:layout_width="20dp"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switchWidget"
        android:layout_gravity="center_vertical"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PlaneSwitcher"/>
    <TextView
        android:text="@string/celsius"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"
        android:layout_width="30dp"
        android:layout_height="wrap_content" />
</LinearLayout>